--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https:///YuriyShevchyk.github.io/goit-hw-10-v2",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-hw-10-v2/"
+    "build": "parcel build src/*.html --public-url/goit-hw-10-v2/"
   },
   "repository": {
     "type": "git",
