--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcel-project-template",
+  "name": "goit-hw-10-v2",
   "version": "2.0.0",
   "description": "",
   "homepage": "https:///YuriyShevchyk.github.io/goit-hw-10-v2",
