--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-hw-10-v2",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https:///YuriyShevchyk.github.io/goit-hw-10-v2",
+  "homepage": "https://YuriyShevchyk.github.io/goit-hw-10-v2",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-hw-10-v2/"
